--- a/malseb_horjan_/malseb_horjan_.csproj
+++ b/malseb_horjan_/malseb_horjan_.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="robocode">
+      <HintPath>..\..\..\..\..\..\robocode\libs\robocode.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
