--- a/malseb_horjan_/malseb_horjan_.csproj
+++ b/malseb_horjan_/malseb_horjan_.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="robocode">
-      <HintPath>..\..\..\..\..\..\robocode\libs\robocode.dll</HintPath>
+      <HintPath>..\robocode.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
