--- a/malseb_horjan_/PG4500_2015_Innlevering1.csproj
+++ b/malseb_horjan_/PG4500_2015_Innlevering1.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Driver.cs" />
     <Compile Include="Gunner.cs" />
-    <Compile Include="Robot.cs" />
+    <Compile Include="malseb_horjan_Robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scout.cs" />
   </ItemGroup>
