--- a/malseb_horjan_/PG4500_2015_Innlevering1.csproj
+++ b/malseb_horjan_/PG4500_2015_Innlevering1.csproj
@@ -47,6 +47,7 @@
     <Compile Include="malseb_horjan_Robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scout.cs" />
+    <Compile Include="StateMachine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
