started making Math.

--- a/PG4500_2015_Innlevering1/PG4500_2015_Innlevering1.csproj
+++ b/PG4500_2015_Innlevering1/PG4500_2015_Innlevering1.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Driver.cs" />
     <Compile Include="Gunner.cs" />
     <Compile Include="malseb_horjan_Robot.cs" />
+    <Compile Include="Math.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scout.cs" />
     <Compile Include="StateMachine.cs" />
