Our robots are now beyblades! Welcome to the future of efficiency!

--- a/PG4500_2015_Innlevering1/PG4500_2015_Innlevering1.csproj
+++ b/PG4500_2015_Innlevering1/PG4500_2015_Innlevering1.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Driver.cs" />
     <Compile Include="Gunner.cs" />
-    <Compile Include="malseb_horjan_Robot.cs" />
+    <Compile Include="malseb_horjan_Draziel.cs" />
     <Compile Include="Mathr.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scout.cs" />
