--- a/PG4500_2015_Innlevering1/PG4500_2015_Innlevering1.csproj
+++ b/PG4500_2015_Innlevering1/PG4500_2015_Innlevering1.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Driver.cs" />
     <Compile Include="Gunner.cs" />
     <Compile Include="malseb_horjan_Draziel.cs" />
-    <Compile Include="Mathr.cs" />
+    <Compile Include="Coords.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scout.cs" />
   </ItemGroup>
